[gd_scene load_steps=2 format=3 uid="uid://bbyblk6y7jv7q"]

[ext_resource type="Script" uid="uid://dp8bjufq85la5" path="res://scripts/HUD.gd" id="1_ahhtf"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 150.0

[node name="ResourcesPanel" type="Panel" parent="VBox"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/ResourcesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="Label" parent="VBox/ResourcesPanel/VBoxContainer"]
layout_mode = 2
text = "Деньги: $100000"

[node name="ReputationLabel" type="Label" parent="VBox/ResourcesPanel/VBoxContainer"]
layout_mode = 2
text = "Репутация: 50/100"

[node name="StateLabel" type="Label" parent="VBox/ResourcesPanel/VBoxContainer"]
layout_mode = 2
text = "Состояние: Планирование"

[node name="SurveyButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
text = "Георазведка ($5000)"

[node name="BuildButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
text = "Построить плотину"
